test/corpus/comments.txt
=====
Comments
=====
// single comment

/*

multi
  line

*/

rule(x) :-
  /* inside rule */
  clause(?),
  x = ?.

---

(source_file
  (comment)
  (comment)
  (rule (identifier) (argument_list (identifier))
    (comment)
    (clause_list
      (clause (identifier) (argument_list (hole)))
      (comparison (identifier) (compare_op) (hole)))))
