test/corpus/extern.txt
==================
External functions
==================

@extern func(u32, u32) u32.
@extern constraint(string, u32).

rule(func(x, y), y) :-
  x = func(123, 456),
  y = 789,
  constraint("abc", y).

@extern constraint_with_named_fields(field1: string, field2: u32).
@extern func_with_named_fields(string, named_field: u32).

---

(source_file
  (extern (identifier) (arg_list (arg (type)) (arg (type))) (type))
  (extern (identifier) (arg_list (arg (type)) (arg (type))))
  (rule (identifier)
    (argument_list (identifier) (argument_list (identifier) (identifier)) (identifier))
    (clause_list
      (comparison (identifier) (compare_op) (identifier) (argument_list (number) (number)))
      (comparison (identifier) (compare_op) (number))
      (clause (identifier) (argument_list (string) (identifier)))))
  (extern (identifier)
    (arg_list
      (arg (named_type (identifier) (type)))
      (arg (named_type (identifier) (type)))))
  (extern (identifier)
    (arg_list
      (arg (type))
      (arg (named_type (identifier) (type))))))
