test/corpus/typedef.txt
========
Typedefs
========

@def x(u32).
@def edge(string, string).
@def reachable(string   ,  string).

@def with_input(u32) input.
@def with_output(u32) output.
@def with_many_qualifiers(u32) input output output input output.

@def with_all_field_names(field1: u32, another_field: string).
@def with_one_field_name(string, another_field: u32).

---

(source_file
  (typedef (identifier) (arg_list (arg (type))))
  (typedef (identifier) (arg_list (arg (type)) (arg (type))))
  (typedef (identifier) (arg_list (arg (type)) (arg (type))))

  (typedef (identifier) (arg_list (arg (type))) (qualifier))
  (typedef (identifier) (arg_list (arg (type))) (qualifier))
  (typedef (identifier) (arg_list (arg (type))) (qualifier) (qualifier) (qualifier) (qualifier) (qualifier))

  (typedef (identifier)
    (arg_list
      (arg (named_type (identifier) (type)))
      (arg (named_type (identifier) (type)))))
  (typedef (identifier)
    (arg_list
      (arg (type))
      (arg (named_type (identifier) (type))))))
